--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -1,1 +1,39 @@
- 
+.container{
+    width: 100%;
+    max-width: 130rem;
+    padding: 0rem 4rem;
+    display: flex;
+    gap: 2rem;
+}
+
+.dashboard{
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.dashboardHead{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.dashboardHead>.head{
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+}
+
+.head>:nth-child(1){
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.durationButton>select{
+    border: none;
+    background: var(--orange-gradient);
+    padding: 10px;
+    font-weight: 500;
+    border-radius: 10px;
+    font-size: 0.8rem;
+}
