--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -64,17 +64,30 @@
   justify-content: center;
 }
 
-.profile>img{
-    height: 50px;
-    width: 50px;
+.profile > img {
+  height: 50px;
+  width: 50px;
 }
-.details{
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
+.details {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
-.details>:nth-child(1){
-    font-size: 1rem;
-    font-weight: bold;
+.details > :nth-child(1) {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.content {
+  margin: auto;
+  display: flex;
+  height: 100%;
+  /* align-items: center; */
+  margin-top: 4rem;
+}
+
+.content > div {
+  width: 100%;
+  min-width: 75vh;
 }
