--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -37,3 +37,41 @@
     border-radius: 10px;
     font-size: 0.8rem;
 }
+
+.cards{
+    display: flex;
+    justify-content: space-between;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.cardHead{
+    font-size: 1rem;
+}
+
+.cardHead>:nth-child(1){
+    color: rgba(255, 255, 255, 0.835);
+}
+
+
+.cardHead>:nth-child(2){
+    margin-left: 1.5rem;
+    font-size: 0.8rem;
+    color: var(--green);
+}
+
+.cardAmount>:nth-child(1){
+    font-size: 0.9rem;
+    color: rgba(255, 255, 255, 0.776);
+    position: relative;
+    bottom: 5px;
+}
+.cardAmount>:nth-child(2){
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-left: 8px;
+}
