--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -83,8 +83,8 @@
   margin: auto;
   display: flex;
   height: 100%;
-  /* align-items: center; */
-  margin-top: 4rem;
+  align-items: center;
+  margin-top: -4rem;
 }
 
 .content > div {
